--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/lbfrancisco" target="_blank">Lucas Francisco</a>.
     </footer>
-    <script src="/main.js"></script>
+    <script src="./main.js" type="text/javascript"></script>
   </body>
 </html>
