feat(axios): add fetch request with axios

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Advice Generator App</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="main.js" defer></script>
   </head>
   <body>
     <main>
@@ -24,6 +26,5 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/lbfrancisco" target="_blank">Lucas Francisco</a>.
     </footer>
-    <script src="/main.js"></script>
   </body>
 </html>
